# aabim

./: .gitignore  README.md  STRUCTURE.md  api_design.ipynb  environment.yml  pyproject.toml
.github/workflows/: tests.yml
aabim/: __init__.py
aabim/ancillary/: get_ancillary.py
aabim/ancillary/obpg/: get_gmao.py
aabim/calibration/: __init__.py  data.py  insitu.py  model.py
aabim/converter/wise/: flightline.py  read_pix.py
aabim/data/: __init__.py  registry.py
aabim/data/atmospheric/: __init__.py  atmospheric.py
aabim/data/solar_irradiance/: __init__.py  solar_irradiance.py
aabim/example/: l2r_sma_calibration.ipynb
aabim/experiment/workflow/: ocdb.py
aabim/image/: __init__.py  calibrate.py  correct.py  extract.py  image.py  io.py  sensor.py
aabim/model/aquatic/: inversion_stan_gmm.py  invert_pixelwise.py  segment_image.py  segment_image_slic_pc.py
aabim/model/stan/: atm_core.hpp  fct_rtm_stan.hpp  model_atmaqua_rb.stan  model_gmm.stan  rtm_core.hpp
aabim/model/surface/: g21.py  rayleigh.py
aabim/processing/: tiling.py
aabim/utils/: __init__.py  helper.py
tests/: conftest.py  make_fixtures.py  test_calibration.py  test_correct.py  test_io.py  test_lut.py
tests/data/: insitu_reflectance.csv  sma_calibration_model.csv
